[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = """
A clone of the standard library's `RefCell` type with extra debugging support in
non-release builds. Whenever a borrow error happens the current locations of
where known borrows were created will be printed out as well.
"""
documentation = "https://docs.rs/debug-cell"
homepage = "https://github.com/alexcrichton/debug-cell"
license = "MIT/Apache-2.0"
name = "debug-cell"
readme = "README.md"
repository = "https://github.com/alexcrichton/debug-cell"
version = "0.1.1"

[dependencies]
backtrace = "0.3"
stable_deref_trait = {version = "1.2.0", optional = true}

[features]
default = ["stable_deref"]
stable_deref = ["dep:stable_deref_trait"]

[[test]]
harness = false
name = "smoke"
